<resources>
    <string name="app_name">News App</string>
    <string name="user_name">User Name</string>
    <string name="john_wick">John Wick</string>
    <string name="todo">TODO</string>
    <string name="full_name">"Full Name "</string>
    <string name="date_of_birth">"Date Of Birth "</string>
    <string name="email">"Email "</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="eren_y321">_eren_y321</string>
    <string name="full_nam">Full Name</string>
    <string name="eren_yeager">Eren Yeager</string>
    <string name="email_">Email</string>
    <string name="ey321_gmail_com">ey321@gmail.com</string>
    <string name="_30_03_2002">30–03–2002</string>
    <string name="saved_categories">SAVED CATEGORIES</string>
    <string name="saved_sources">SAVED SOURCES</string>
    <string name="news_source">News Source</string>
    <string name="news_category">News Category</string>
    <string name="log_out">LOG OUT</string>
    <string name="date_of_birt">Date Of Birth</string>
</resources>